# team-finder-telegram-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  games.json  main.py  pyproject.toml  test.py
src/bot/: constants.py  filters.py  handlers.py
src/bot/handlers/: __init__.py  base.py  commands.py  conversations.py  handlers.py
src/bot/utils/: __init__.py  parsers.py  telegram.py
src/common/: config.py  constants.py  di.py  dtos.py  entities.py  filters.py  utils.py
src/domain/: exceptions.py
src/domain/entities/: __init__.py  games.py  users.py
src/domain/entities/games/: base.py  impl.py
src/infra/managers/: base.py
src/infra/repositories/: base.py  impl.py  mongo.py
src/infra/repositories/team/: redis.py
src/infra/repositories/user/: mongo.py
team_bot/bot/v1/: constants.py  filters.py
team_bot/bot/v1/handlers/: base.py  commands.py  conversations.py
team_bot/bot/v1/utils/: telegram.py
team_bot/bot/v2/: constants.py
team_bot/bot/v2/handlers/: commands.py
team_bot/common/: config.py
team_bot/domain/: exceptions.py  utils.py
team_bot/domain/entities/: users.py
team_bot/domain/entities/games/: __init__.py  base.py  impl.py
team_bot/entry/: aiogram_bot.py  py_telegram_bot.py
team_bot/infra/: di.py  utils.py
team_bot/infra/game_collection/: file.py
team_bot/infra/repositories/: base.py
team_bot/infra/repositories/team/: redis.py
team_bot/infra/repositories/user/: mongo.py
tests/: conftest.py
tests/details/: conftest.py  test_mongo_repo.py  test_redis_repo.py
