[tool.poetry]
name = "teambot"
version = "0.1.0"
description = ""
authors = ["artorias <kerelkobarabash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mongorepo = "^0.1.2"
python-telegram-bot = "^21.3"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
punq = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
