[tool.poetry]
name = "teambot"
version = "0.1.0"
description = ""
authors = ["artorias <kerelkobarabash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.3"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
punq = "^0.7.0"
orjson = "^3.10.6"
redis = "^5.0.7"
aiogram = "^3.20.0.post0"
mongorepo = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
